Error en la accion de eliminer corregida

--- a/demo/src/main/resources/templates/eventos.html
+++ b/demo/src/main/resources/templates/eventos.html
@@ -29,7 +29,7 @@
     </div>
     <div class="row">
         <div class="col-lg-3">
-            <a th:href="@{/estudiantes/nuevo}" class="btn btn-primary btn-sm mb3">Agregar evento</a>
+            <a th:href="@{/eventos/nuevo}" class="btn btn-primary btn-sm mb3">Agregar evento</a>
         </div>
     </div>
     <br>
