--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -29,13 +29,14 @@
               class="icon-bar"></span> <span class="icon-bar"></span> <span
               class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" th:href="@{/}">Registro y
+      <a class="navbar-brand" th:href="@{/login}">Registro y
         inicio de sesión</a>
     </div>
+
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Cerrar
-          sesión</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
+        <li sec:authorize="isAuthenticated()"><a th:href="@{/login?logout}">Cerrar sesión</a></li>
       </ul>
     </div>
   </div>
