BD transaccional y constraints

--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
-    <div class="navbar-header">
+   <!-- <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed"
               data-toggle="collapse" data-target="#navbar" aria-expanded="false"
               aria-controls="navbar">
@@ -31,12 +31,13 @@
       </button>
       <a class="navbar-brand" th:href="@{/login}">Registro y
         inicio de sesión</a>
-    </div>
+    </div>-->
 
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li class="nav-item"><a class="nav-link" th:href="@{/login}">Registro/inicio de sesión</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
-        <li sec:authorize="isAuthenticated()"><a th:href="@{/login?logout}">Cerrar sesión</a></li>
+        <li sec:authorize="isAuthenticated()"><a th:href="@{/login}">Cerrar sesión</a></li>
       </ul>
     </div>
   </div>
@@ -48,10 +49,6 @@
 <div class="container">
   <h1>Registro e inicio de sesión con Spring Boot + Spring Security
     + Thymeleaf + Hibernate + MySQL y Bootstrap</h1>
-  <br>
-  <h4>
-    Bienvenido <span sec:authentication="principal.username"></span>
-  </h4>
 
 </div>
 
