--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -28,6 +28,7 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="#" th:href="@{/}">Volver</a>
             <!--<a class="navbar-brand" href="#" th:href="@{/login}">Registro y
                 inicio de sesión</a>-->
         </div>
@@ -55,15 +56,14 @@
 
 
                 <div class="form-group">
-                    <label  for="username">Nombre de
-                        usuario : </label> <input id="username"  name="username" type="text" class="form-control"
-                                                  required autofocus="autofocus" placeholder="Digite su email ID">
+                    <label  for="username">Usuario: </label> <input id="username"  name="username" type="text" class="form-control"
+                                                  required autofocus="autofocus" placeholder="Ingrese su email">
                 </div>
 
                 <div class="form-group">
-                    <label  for="password">Password : </label> <input
+                    <label  for="password">Contraseña: </label> <input
                         id="password" type="password"  name="password" class="form-control" required
-                        autofocus="autofocus" placeholder="Digite su password">
+                        autofocus="autofocus" placeholder="Ingrese su contraseña">
                 </div>
 
                 <div class="form-group">
