--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -35,9 +35,10 @@
 
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-item"><a class="nav-link" th:href="@{/login}">Registro/inicio de sesión</a></li>
+        <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
+        <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
-        <li sec:authorize="isAuthenticated()"><a th:href="@{/login}">Cerrar sesión</a></li>
+        <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
@@ -49,7 +50,6 @@
 <div class="container">
   <h1>Registro e inicio de sesión con Spring Boot + Spring Security
     + Thymeleaf + Hibernate + MySQL y Bootstrap</h1>
-
 </div>
 
 
