--- a/demo/src/main/resources/templates/registro.html
+++ b/demo/src/main/resources/templates/registro.html
@@ -28,8 +28,7 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registro y
-                inicio de sesión</a>
+            <a class="navbar-brand" href="#" th:href="@{/}">Volver</a>
         </div>
     </div>
 </nav>
@@ -48,25 +47,25 @@
             <h1>Regístrate</h1>
             <form th:action="@{/registro}" method="post" th:object="${usuario}">
                 <div class="form-group">
-                    <label class="control-label" for="nombre">Nombre : </label> <input
+                    <label class="control-label" for="nombre">Nombre: </label> <input
                         id="nombre" type="text" class="form-control" th:field="*{nombre}"
                         required autofocus="autofocus">
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label" for="apellido">Apellido : </label> <input
+                    <label class="control-label" for="apellido">Apellido: </label> <input
                         id="apellido" class="form-control" th:field="*{apellido}"
                         required autofocus="autofocus">
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label" for="email">Email : </label> <input
+                    <label class="control-label" for="email">Email: </label> <input
                         id="email" type="email" class="form-control" th:field="*{email}"
                         required autofocus="autofocus">
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label" for="password">Password : </label> <input
+                    <label class="control-label" for="password">Contraseña: </label> <input
                         type="password" id="password" class="form-control" th:field="*{password}"
                         required autofocus="autofocus">
                 </div>
