Correccion de endpoints Formateo de HTMLs

--- a/demo/src/main/resources/templates/eventos.css
+++ b/demo/src/main/resources/templates/eventos.css
@@ -1,6 +1,6 @@
 /* Estilo para el contenedor principal */
-.container {
-    margin-top: 20px;
+.container-eventos {
+    margin-top: 40px;
 }
 
 /* Estilo para los cuadrados de la tabla */
