--- a/demo/src/main/resources/templates/crear_evento.html
+++ b/demo/src/main/resources/templates/crear_evento.html
@@ -1,53 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>registro de eventos</title>
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-</head>
-<body>
-
-
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="#"> Control de eventos</a>
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link"
-                                    th:href="@{/eventos}">Control de eventos</a></li>
-        </ul>
-    </div>
-</nav>
-
-<br>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center">Registro de eventos</h1>
-            <div class="card-body">
-                <form th:action="@{/eventos}" th:object="${evento}" method="POST">
-                    <div class="form-group">
-                        <label>Titulo : </label>
-                        <input type="text" name="titulo" th:field="*{titulo}" class="form-control" placeholder="Digite el : " required>
+    <head>
+        <meta charset="UTF-8">
+        <title>registro de eventos</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="#"> Control de eventos</a>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link"
+                                            th:href="@{/eventos}">Control de eventos</a></li>
+                </ul>
+            </div>
+        </nav>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+                    <h1 class="text-center">Registro de eventos</h1>
+                    <div class="card-body">
+                        <form th:action="@{/eventos}" th:object="${evento}" method="POST">
+                            <div class="form-group">
+                                <label>Titulo: </label>
+                                <input type="text" name="titulo" th:field="*{titulo}" class="form-control" placeholder="Ingrese el titulo: " required>
+                            </div>
+                            <div class="form-group">
+                                <label>Descripcion: </label>
+                                <input type="text" name="descripcion" th:field="*{descripcion}" class="form-control" placeholder="Ingrese la descripcion: " required>
+                            </div>
+                            <div class="box-footer">
+                                <button class="btn btn-success">Guardar</button>
+                            </div>
+                        </form>
                     </div>
-
-                    <div class="form-group">
-                        <label>Descripcion : </label>
-                        <input type="text" name="descripcion" th:field="*{descripcion}" class="form-control" placeholder="Digite la descripcion : " required>
-                    </div>
-
-
-                    <div class="box-footer">
-                        <button class="btn btn-success">Guardar</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-
-
-</body>
+    </body>
 </html>
