--- a/demo/src/main/resources/templates/eventos.html
+++ b/demo/src/main/resources/templates/eventos.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Eventos</title>
-    <link rel="stylesheet" href="eventos.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body>
-
-
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#"> Control de eventos</a>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link"
-                                        th:href="@{/eventos}">Control de eventos</a></li>
-            </ul>
-        </div>
-    </nav>
-
-
-
-<div class="container">
-    <div class="row">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <head>
+        <meta charset="utf-8">
+        <title>Eventos</title>
+        <link rel="stylesheet" href="eventos.css">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+              integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+              crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
+                        <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
+                        <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container container-eventos">
         <h1>Eventos</h1>
-    </div>
-    <div class="row">
-        <div class="col-lg-3">
-            <a sec:authorize="isAuthenticated()" th:href="@{/eventos/nuevo}" class="btn btn-primary btn-sm mb3">Agregar evento</a>
+        <div class="row">
+            <div class="col-lg-3">
+                <a sec:authorize="isAuthenticated()" th:href="@{/eventos/nuevo}" class="btn btn-primary btn-sm mb3">Agregar evento</a>
+            </div>
         </div>
-    </div>
-    <br>
-    <table class="table table-striped table-bordered">
-        <thead class="table-dark">
-        <tr>
-            <th>Titulo</th>
-            <th>Descripcion</th>
-            <th sec:authorize="isAuthenticated()">Acciones</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="evento : ${eventos}">
-            <td th:text="${evento.titulo}">Titulo</td>
-            <td th:text="${evento.descripcion}">Descripcion</td>
+            <br>
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
+                <tr>
+                    <th>Titulo</th>
+                    <th>Descripcion</th>
+                    <th sec:authorize="isAuthenticated()">Acciones</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="evento : ${eventos}">
+                    <td th:text="${evento.titulo}">Titulo</td>
+                    <td th:text="${evento.descripcion}">Descripcion</td>
 
-            <td sec:authorize="isAuthenticated()">
-                <a th:href="@{/eventos/editar/{id}(id=${evento.id})}" class="btn btn-info">Editar</a>
-                <a th:href="@{/eventos/{id}(id=${evento.id})}" class="btn btn-danger">Eliminar</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-</body>
+                    <td sec:authorize="isAuthenticated()">
+                        <a th:href="@{/eventos/editar/{id}(id=${evento.id})}" class="btn btn-info">Editar</a>
+                        <a th:href="@{/eventos/eliminar/{id}(id=${evento.id})}" class="btn btn-danger">Eliminar</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </body>
 </html>
