--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,86 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-  <meta charset="utf-8">
-  <title>Inicio</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-
-  <style>
-    /* Estilos CSS personalizados */
-    .table-container {
-      max-width: 90%;
-      margin: 0 auto;
-    }
-
-    .table {
-      max-width: 100%;
-    }
-  </style>
-</head>
-<body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+  <head>
+    <meta charset="utf-8">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <style>
+      /* Estilos CSS personalizados */
+      .table-container {
+        max-width: 90%;
+        margin: 0 auto;
+      }
+      .table {
+        max-width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
+            <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
+            <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  <br>
+  <br>
   <div class="container">
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
-        <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
-        <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-      </ul>
+    <h1>Registro, inicio de sesión y CRUD- Grupo 5</h1>
+    <h2>Usuarios registrados: </h2>
+  </div>
+  <br>
+  <br>
+  <div class="container table-container">
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+        <tr>
+          <th>ID</th>
+          <th>Nombre</th>
+          <th>Apellido</th>
+          <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="usuario : ${usuarios}">
+          <td th:text="${usuario.id}">ID</td>
+          <td th:text="${usuario.nombre}">ID</td>
+          <td th:text="${usuario.apellido}">ID</td>
+          <td th:text="${usuario.email}">ID</td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </div>
-</nav>
-
-<br>
-<br>
-
-<div class="container">
-
-  <h1>Registro, inicio de sesión y CRUD- Grupo 5</h1>
-  <h2>Usuarios registrados: </h2>
-
-</div>
-
-<br> <br>
-
-<div class="container table-container">
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered">
-      <thead class="table-dark">
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Email</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="usuario : ${usuarios}">
-        <td th:text="${usuario.id}">ID</td>
-        <td th:text="${usuario.nombre}">ID</td>
-        <td th:text="${usuario.apellido}">ID</td>
-        <td th:text="${usuario.email}">ID</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-</body>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+          integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+          crossorigin="anonymous"></script>
+  </body>
 </html>
