--- a/demo/src/main/resources/templates/eventos.html
+++ b/demo/src/main/resources/templates/eventos.html
@@ -18,10 +18,12 @@
             <div class="container">
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
+                        <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/}">Volver</a></li>
                         <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
                         <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
                         <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
                         <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+
                     </ul>
                 </div>
             </div>
