--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -3,20 +3,489 @@
   <head>
     <meta charset="utf-8">
     <title>Inicio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    @font-face {
+    font-family: 'Gotham';
+    src: url(Fonts/GothamMedium.ttf) format('truetype');
+    font-weight: normal;
+    }
+
+    @font-face {
+    font-family: 'Gotham';
+    src: url(Fonts/GothamBold.ttf) format('truetype');
+    font-weight: bold;
+    }
     <style>
-      /* Estilos CSS personalizados */
-      .table-container {
-        max-width: 90%;
-        margin: 0 auto;
-      }
-      .table {
-        max-width: 100%;
-      }
-    </style>
+
+
+
+
+  *{
+    box-sizing: border-box;
+  }
+
+  .wave-header{
+    width: 100%;
+    position: relative;
+  }
+
+  svg{
+    position: absolute;
+    bottom: 0;
+  }
+
+  .logo-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo-img {
+    width: 15%;
+    height: auto;
+    margin-right: 10px;
+  }
+
+  html{
+    scroll-behavior: smooth;
+  }
+
+  body{
+    font-family: 'Gotham', sans-serif;
+    margin: 0;
+  }
+
+  h1{ font-size: 3.5em;
+    font-family: 'Gotham', sans-serif;
+    font-weight: bold;
+  }
+
+  h2{ font-size: 2.7em;
+    font-family: 'Gotham';
+    font-weight: normal;
+  }
+  h3{ font-size: 2em;
+  }
+  p{ font-size: 1.25em;}
+  ul{ list-style: none;}
+  li{ font-size: 1.25em;}
+
+  button{
+    font-size: 1.25em;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 2px solid rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    color: white;
+    background-color:#E51742;
+  }
+
+
+
+  button:hover{
+    background-color: rgb(35, 90, 243);
+  }
+
+  .container{
+    max-width: 1400px;
+    margin: auto;
+  }
+
+  .color-acento{ color:rgb(41, 5, 241); }
+
+  header{
+    background-color: #fefefe;
+    z-index: 1000;
+
+  }
+
+  header .logo{
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: rgb(41, 5, 241);
+    font-size: 1.6em;
+  }
+
+  header .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header nav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 25px;
+  }
+
+  header a{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0,0.3 );
+  }
+
+  .donar-button{
+    color:#E51742;
+  }
+
+  header a:hover{
+    color: rgb(41, 5, 241);
+  }
+
+
+
+  #hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 90vh;
+    background-image:url("../static/media/DSC_0425.JPG");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+
+
+  #hero h1{
+    margin-top: 11%;
+    color: white;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0,0.7 );
+  }
+
+
+
+  #ultima .container{
+    padding: 130px 40px;
+  }
+
+  #ultima {
+    background-color: #114372;
+  }
+
+  #ultima .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  #ultima h2, #ultima p{
+    color: white;
+  }
+
+  .block {
+    width: 22%;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
+
+  .block h2 {
+    font-size: 18px;
+    margin: 10px 0;
+  }
+
+  .block p {
+    font-size: 14px;
+  }
+
+
+  #areas-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+
+  .left-section,
+  .right-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  iframe {
+    margin: 0 auto;
+    display: block;
+    margin-top: 12%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+
+
+
+  .area {
+    width: 60%;
+    height: 100px;
+    margin: 5px;
+    text-align: center;
+    line-height: 100px;
+    color: #fff;
+    background-color: #E51742;
+    border-radius: 10px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+  }
+
+  .cuadro {
+    text-align: center;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+  }
+
+  .cuadro a {
+    margin: 4%;
+    text-decoration: none;
+    color:white;
+    display: block;
+    position: relative;
+  }
+
+  .cuadro img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  }
+
+  .cuadro:hover img {
+    transform: scale(1.05);
+    opacity: 0.8;
+  }
+
+
+  .cuadro p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
+  #que-hacemos{
+    background-color: #CDDBE8;
+    color: black;
+    text-align: center;
+  }
+
+  #que-hacemos h3{
+    color: white;
+  }
+
+  #que-hacemos .container{
+    padding: 100px 12px;
+    padding-top: 100px;
+  }
+
+  #que-hacemos h2{
+    color: #114372;
+    text-shadow: 10px 10px 15px rgba(0, 0, 0,0.5 );
+    margin-top: 0;
+    font-size: 3.2em;
+  }
+
+  #que-hacemos p{
+    display: none;
+  }
+
+
+  #que-hacemos .carta{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px 0px;
+    margin: 30px;
+    border-radius: 15px;
+  }
+
+
+  .carta:first-child{
+    background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+    )
+    ,url("../static/media/DSC_0016.JPG");
+
+  }
+
+  .carta:nth-child(2){
+    background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+    )
+    ,url("../static/media/DSC_0108.JPG");
+  }
+
+  .carta:nth-child(3){
+    background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+    )
+    ,url("../static/media/DSC_0042.JPG");
+
+  }
+
+
+  .image-text-section {
+    background-color: #ffffff;
+    padding: 10%;
+
+  }
+
+  .image-text-section .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .image-container img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .text-container {
+    max-width: 60%;
+  }
+
+
+  .text-container h2 {
+    font-size: 2em;
+  }
+
+  .text-container p {
+    font-size: 1.2em;
+  }
+
+
+
+  footer{
+    background-color: #114372;
+  }
+
+  footer p{
+    margin: 0;
+    padding: 8px;
+    color: rgb(100,100,100);
+  }
+
+  footer .container{
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  footer .button {
+    color: #E51742;
+  }
+
+  footer .donate-button {
+    transform: translateY(-20px);
+  }
+
+
+  @media (min-width: 850px){
+    header{
+      position: fixed;
+      width: 100%;
+    }
+
+    header .container{
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    header nav{
+      flex-direction: row;
+      padding-bottom: 0;
+      padding-right: 20px;
+    }
+
+    #hero h1{
+      font-size: 5em;
+    }
+
+    #que-hacemos .programas{
+      display: flex;
+      justify-content: center;
+    }
+
+    #que-hacemos p{
+      display: block;
+      margin-bottom: 30px;
+    }
+
+    #que-hacemos h2{
+      font-size: 4em;
+    }
+
+    #que-hacemos h3{
+      margin-top: 0;
+    }
+
+    #que-hacemos .carta p {
+      margin-top: 25%;
+    }
+
+
+
+    #que-hacemos .carta{
+      padding: 50px ;
+      background-size: 100% 150px;
+      background-repeat: no-repeat;
+      background-position-y: 0;
+      background-color: #ffffff;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    }
+
+    .carta:first-child{
+      background-image: linear-gradient(
+              0deg,
+              rgba(0,0,0,0.5),
+              rgba(0,0,0,0.5)
+      )
+      ,url("../static/media/DSC_0016-crop.png");
+
+    }
+
+    .carta:nth-child(2){
+      background-image: linear-gradient(
+              0deg,
+              rgba(0,0,0,0.5),
+              rgba(0,0,0,0.5)
+      )
+      ,url("../static/media/DSC_0108-crop.JPG");
+    }
+
+    .carta:nth-child(3){
+      background-image: linear-gradient(
+              0deg,
+              rgba(0,0,0,0.5),
+              rgba(0,0,0,0.5)
+      )
+      ,url("../static/media/DSC_0042-crop.JPG");
+
+    }
+  }
+
+  @media (min-width: 1200px) {
+    #como-participar{
+      background-position-x: calc(100vw - 800px);
+    }
+  }
+
+</style>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -33,36 +502,137 @@
     </nav>
   <br>
   <br>
-  <div class="container">
-    <h1>Registro, inicio de sesión y CRUD- Grupo 5</h1>
-    <h2>Usuarios registrados: </h2>
-  </div>
-  <br>
-  <br>
-  <div class="container table-container">
-    <div class="table-responsive">
-      <table class="table table-striped table-bordered">
-        <thead class="table-dark">
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Apellido</th>
-          <th>Email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="usuario : ${usuarios}">
-          <td th:text="${usuario.id}">ID</td>
-          <td th:text="${usuario.nombre}">ID</td>
-          <td th:text="${usuario.apellido}">ID</td>
-          <td th:text="${usuario.email}">ID</td>
-        </tr>
-        </tbody>
-      </table>
+
+    <section id="hero">
+      <h1>Colaborá con <br>Cáritas</h1>
+    </section>
+
+    <div class="wave-header">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,256L48,261.3C96,267,192,277,288,266.7C384,256,480,224,576,192C672,160,768,128,864,133.3C960,139,1056,181,1152,202.7C1248,224,1344,224,1392,224L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </div>
-  </div>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-          integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-          crossorigin="anonymous"></script>
+
+    <section id="areas-section">
+      <div class="left-section">
+        <div class="cuadro">
+          <a href="enlace_1.html">
+            <img src="media/DSC_0016.JPG" alt="Imagen 1">
+            <p>Vivienda</p>
+          </a>
+        </div>
+        <div class="cuadro">
+          <a href="enlace_2.html">
+            <img src="media/DSC_0350.JPG" alt="Imagen 2">
+            <p>Pastoral</p>
+          </a>
+        </div>
+      </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105017.73147049602!2d-59.50435040289008!3d-34.65964978236415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc7313caa5e45b%3A0xc86f63a77809bb3a!2sMercedes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1699481557694!5m2!1ses!2sar" width="80%" height="80%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="right-section">
+        <div class="cuadro">
+          <a href="enlace_1.html">
+            <img src="media/DSC_0142.JPG" alt="Imagen 1">
+            <p>Economia solidaria</p>
+          </a>
+        </div>
+        <div class="cuadro">
+          <a href="enlace_2.html">
+            <img src="media/DSC_0077.JPG" alt="Imagen 2">
+            <p>Comunicacion y recursos</p>
+          </a>
+        </div>
+      </div>
+    </section>
+
+
+
+    <section id="que-hacemos">
+      <div class="container">
+        <h2>Novedades</h2>
+        <div class="programas">
+          <div class="carta">
+            <h3>Donación mensual</h3>
+            <p>Es un compromiso de dar una cantidad específica de dinero de forma regular.</p>
+            <button>+ Info</button>
+          </div>
+          <div class="carta">
+            <h3>Doná por unica vez</h3>
+            <p>Implica dar una cantidad de dinero de manera puntual, sin un compromiso contínuo.</p>
+            <button>+ Info</button>
+          </div>
+          <div class="carta">
+            <h3>Actualizar aporte mensual</h3>
+            <p>Posibilidad de modificar la cantidad o detalles de una donación mensual ya existente.</p>
+            <button>+ Info</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-text-section">
+      <div class="container">
+        <div class="image-container">
+          <img src="media/Captura desde 2023-11-10 09-01-44.png">
+        </div>
+        <div class="text-container">
+          <h2>¿Cómo donar?</h2>
+          <p>En Cáritas, estamos convencidos que todos tenemos
+            algo para compartir con los demás. Por eso, te invitamos
+            a sumarte y ayudarnos a llevar asistencia, esperanza
+            y oportunidades a quienes están en situación de pobreza,
+            para que logren transformar su realidad.</p>
+        </div>
+      </div>
+    </section>
+
+
+
+    <div class="wave-header">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#114372" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
+    </div>
+
+    <section id="ultima">
+      <div class="container">
+        <div class="block">
+          <h2>Sedes</h2>
+          <p>Texto relacionado con Sedes.</p>
+        </div>
+        <div class="block">
+          <h2>Voluntariado Joven</h2>
+          <p>Texto relacionado con Voluntariado Joven.</p>
+        </div>
+        <div class="block">
+          <h2>Contacto</h2>
+          <p>Información de contacto.</p>
+          <a href="https://www.twitter.com" target="_blank">
+            <i class="fa-brands fa-twitter" style="color: black;"></i>
+          </a>
+
+          <a href="https://www.facebook.com" target="_blank">
+            <i class="fa-brands fa-facebook" style="color: black;"></i>
+          </a>
+          <a href="https://www.instagram.com" target="_blank">
+            <i class="fa-brands fa-instagram" style="color: black;"></i>
+          </a>
+          <a href="https://www.youtube.com" target="_blank">
+            <i class="fa-brands fa-youtube" style="color: black;"></i>
+          </a>
+        </div>
+        <div class="block">
+          <h2>Como Sumarte</h2>
+          <p>Instrucciones para sumarte.</p>
+        </div>
+      </div>
+    </section>
+
+
+
+    <footer>
+      <div class="container">
+        <button class="donate-button">Donar aquí</button>
+      </div>
+    </footer>
+
+
   </body>
 </html>
