--- a/demo/src/main/resources/templates/eventos.html
+++ b/demo/src/main/resources/templates/eventos.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Eventos</title>
-        <link rel="stylesheet" href="../static/eventos.css">
         <link rel="stylesheet"
               href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -12,6 +11,7 @@
               href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
               integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
               crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/eventos.css">
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -41,6 +41,7 @@
                 <tr>
                     <th>Titulo</th>
                     <th>Descripcion</th>
+                    <th>Imagen</th>
                     <th sec:authorize="isAuthenticated()">Acciones</th>
                 </tr>
                 </thead>
@@ -48,7 +49,7 @@
                 <tr th:each="evento : ${eventos}">
                     <td th:text="${evento.titulo}">Titulo</td>
                     <td th:text="${evento.descripcion}">Descripcion</td>
-
+                    <td><img th:src="@{${'images/'+evento.imagePath}}" alt="Imagen del evento" class="evento-foto"></td>
                     <td sec:authorize="isAuthenticated()">
                         <a th:href="@{/eventos/editar/{id}(id=${evento.id})}" class="btn btn-info">Editar</a>
                         <a th:href="@{/eventos/eliminar/{id}(id=${evento.id})}" class="btn btn-danger">Eliminar</a>
