--- a/demo/src/main/resources/static/css/eventos.css
+++ b/demo/src/main/resources/static/css/eventos.css
@@ -21,3 +21,142 @@
     display: flex;
     justify-content: space-around;
 }
+
+button{
+    font-size: 1.25em;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 2px solid rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    color: white;
+    background-color:#E51742;
+}
+
+button:hover{
+    background-color: rgb(35, 90, 243);
+}
+
+header{
+    background-color: #fefefe;
+    z-index: 1000;
+
+}
+
+header .logo{
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: rgb(41, 5, 241);
+    font-size: 1.6em;
+}
+
+header .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 0;
+}
+
+header nav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+header a{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0,0.3 );
+}
+
+.donar-button{
+    color:#E51742;
+}
+
+header a:hover{
+    color: rgb(41, 5, 241);
+}
+.logo-img {
+    width: 15%;
+    height: auto;
+    margin-right: 10px;
+}
+.container{
+    max-width: 1400px;
+    margin: auto;
+}
+
+.wave-header {
+    position: fixed;
+    top: 0; /* Coloca la onda en la parte superior */
+    width: 100%;
+    z-index: 999;
+
+}
+
+svg {
+    position: absolute;
+    bottom: 0;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #114372;
+    z-index: 999;
+}
+
+footer p {
+    margin: 0;
+    padding: 8px;
+    color: rgb(100, 100, 100);
+}
+
+footer .container {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer .donate-button {
+    transform: translateY(-20px);
+}
+
+footer .button {
+    color: #E51742;
+}
+
+footer .donate-button {
+    transform: translateY(-20px);
+}
+.container-box{
+    margin-top: 100px ;
+}
+.container-eventos {
+    margin-top: 100px;
+}
+
+
+@media (min-width: 850px){
+    header{
+        position: fixed;
+        width: 100%;
+    }
+
+    header .container{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    header nav{
+        flex-direction: row;
+        padding-bottom: 0;
+        padding-right: 20px;
+    }}
