--- a/demo/src/main/resources/templates/crear_evento.html
+++ b/demo/src/main/resources/templates/crear_evento.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
         <title>registro de eventos</title>
+        <link rel="stylesheet" href="/css/eventos.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="#"> Control de eventos</a>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link"
-                                            th:href="@{/eventos}">Control de eventos</a></li>
-                </ul>
-            </div>
-        </nav>
-        <br>
+    <header>
         <div class="container">
+            <img src='/media/mercedes_lujan_2.jpg' alt="Logo de Cáritas" class="logo-img">
+            <nav>
+                <a sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/}">Volver</a></a>
+                <a href="/donar" class="donar-button">Donar aquí</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+            </nav>
+        </div>
+    </header>
+        <br>
+        <div class="container-box">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
                     <h1 class="text-center">Registro de eventos</h1>
@@ -43,5 +45,16 @@
                 </div>
             </div>
         </div>
+
+    <div class="wave-header">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#114372" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
+    </div>
+
+    <footer>
+        <div class="container">
+            <button class="donate-button">Donar aquí</button>
+        </div>
+    </footer>
     </body>
 </html>
