--- a/demo/src/main/resources/templates/eventos.html
+++ b/demo/src/main/resources/templates/eventos.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Eventos</title>
+
         <link rel="stylesheet"
               href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -13,23 +14,23 @@
               crossorigin="anonymous">
         <link rel="stylesheet" href="/css/eventos.css">
     </head>
-    <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/}">Volver</a></li>
-                        <li sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></li>
-                        <li sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></li>
-                        <li class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></li>
-                        <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
-                    </ul>
-                </div>
+    <body>
+
+        <header>
+            <div class="container">
+                <img src='/media/mercedes_lujan_2.jpg' alt="Logo de Cáritas" class="logo-img">
+                <nav>
+                    <a sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/}">Volver</a></a>
+                    <a sec:authorize="!isAuthenticated()" class="nav-item"><a class="nav-link" th:href="@{/login}">Inicio de sesión</a></a>
+                    <a sec:authorize="!isAuthenticated()" class="nav-item" ><a class="nav-link" th:href="@{/registro}">Registrarse</a></a>
+                    <a class="nav-item"><a class="nav-link" th:href="@{/eventos}">Control de eventos</a></a>
+                    <a href="/donar" class="donar-button">Donar aquí</a>
+                    <a sec:authorize="isAuthenticated()" th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                </nav>
             </div>
-        </nav>
+        </header>
         <div class="container container-eventos">
-        <h1>Eventos</h1>
         <div class="row">
             <div class="col-lg-3">
                 <a sec:authorize="isAuthenticated()" th:href="@{/eventos/nuevo}" class="btn btn-primary btn-sm mb3">Agregar evento</a>
@@ -58,5 +59,19 @@
                 </tbody>
             </table>
         </div>
+
+
+        <div class="wave-header">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#114372" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
+        </div>
+
+        <footer>
+            <div class="container">
+                <button class="donate-button">Donar aquí</button>
+            </div>
+        </footer>
+
+
     </body>
 </html>
