--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -3,29 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Inicio de sesión</title>
+        <link rel="stylesheet" href="/css/eventos.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
               integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                            aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span> <span
-                            class="icon-bar"></span> <span class="icon-bar"></span> <span
-                            class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#" th:href="@{/}">Volver</a>
-                </div>
-            </div>
-        </nav>
-        <br>
-        <br>
+    <header>
         <div class="container">
+            <img src='/media/mercedes_lujan_2.jpg' alt="Logo de Cáritas" class="logo-img">
+            <nav>
+                <a th:href="@{/}">Volver</a>
+            </nav>
+        </div>
+    </header>
+        <br>
+        <br>
+        <div class="container-box">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <h1>Inicio de sesión</h1>
