- Pequeños cambios de logica de imagenes - Pequeños cambios de estilo - Pequeños cambios de seguridad - Agregada otra imagen de prueba

--- a/demo/src/main/resources/static/css/eventos.css
+++ b/demo/src/main/resources/static/css/eventos.css
@@ -6,12 +6,11 @@
 /* Estilo para los cuadrados de la tabla */
 .table th, .table td {
     text-align: center;
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
 
 /* Estilo para la foto del evento */
 .table .evento-foto {
-    max-width: 25rem;
     max-height: 25rem;
     object-fit: cover;
 }
